style and displayed automatically the first time ok

--- a/src/components/feature-tip/feature-tip.html
+++ b/src/components/feature-tip/feature-tip.html
@@ -1,14 +1,24 @@
-<div *ngIf="show" [style.background-color]="color">
-    <ion-toolbar>
+<section *ngIf="show">
+    <div id="my-curve">
+        <svg viewBox="0 0 2048 2732">
+            <path [style.fill]="color" class="st0" d="M2048.5,2732.5H0.5c168.5-143.9,430-331.9,787-469c532.4-204.4,1004.7-190.7,1261-164"/>
+        </svg>
+    </div>
+
+    <ion-toolbar class="my-close">
         <ion-buttons end>
             <button ion-button icon-only (click)="close()" color="light">
                 <ion-icon name="md-close"></ion-icon>
             </button>
         </ion-buttons>
     </ion-toolbar>
-    <div padding>
-        <ng-content select=".title"></ng-content>
-        <button ion-button clear color="light" *ngIf="!expanded" (click)="expand()">Read more&hellip;</button>
-        <ng-content *ngIf="expanded" select=".summary"></ng-content>
+
+    <div [style.background-color]="color">
+        <div padding>
+            <ng-content select=".title"></ng-content>
+            <button ion-button clear color="light" *ngIf="!expanded" (click)="expand()">Read more&hellip;</button>
+            <ng-content *ngIf="expanded" select=".summary"></ng-content>
+        </div>
     </div>
-</div>
+
+</section>
