--- a/src/components/feature-tip/feature-tip.scss
+++ b/src/components/feature-tip/feature-tip.scss
@@ -1,9 +1,10 @@
 feature-tip {
     opacity: 0.95;
     color: #fff;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width : 100%;
+    
 
     .toolbar {
         .toolbar-background {
